--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,3 @@
 PORT=8000 
 NODE_ENV=production 
-DB_URL = "mongodb://localhost:27017/job-app"
+DB_URL ="mongodb+srvshanmugaraj4696tdgrnACMkz28zfIK@app.sftvlv0.mongodb.netretryWrites=true&w=majority&appName=app"
